Fix Firefox layout bug

--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -54,8 +54,6 @@ h3 {
 }
 
 .sec {
-  clear: both;
-
   &:not(:first-of-type) {
     margin-top: ws(xxxx-large);
   }
